# CS_541_Project

./: .gitignore  Pipfile  README.md  ROADMAP.md  SIGNOFFS.md  context-summary-bayesian-nonparametrics-gp-tda.md  initial_prompt.txt  out.csv  pyproject.toml  requirements.txt
colab/: ctc_bootstrap.ipynb  kaggle_push.py  kaggle_watch.py  run_nb.py
configs/: default.toml
data/: README.md
data_preparation/: README.md  clean_data.py  download_audio.sh  prepare_raw_data.py  prepare_segment_break_data.py  prepare_token_classification_data.py  run.py
data_processing/: README.md  change_last_end_to_vid_length.py  clean_subtitles.py  download_audio.sh  prepare_segment_break_data.py  prepare_token_classification_data.py  run.py
docs/: approaches.md  dataset_v2_plan.md  pipeline_specification.md  pipeline_specification.tex  project_summary.md  s17_phonetic_plan.md  worklog_2026-07-17.md
encode_audio/: README.md
isolate_vocals/: README.md  inference.py  multi_inference.py  requirements.txt  run.py  split_audio.py
presentation/: 4.vtt  89.vtt  display_subtitles.ipynb
s12_review/: METHOD.md  README.md  data.js  index.html  make_review.py
s13_batch3/: 0_draft.csv  100_draft.csv  101_draft.csv  102_draft.csv  103_draft.csv  104_draft.csv  105_draft.csv  106_draft.csv  107_draft.csv  108_draft.csv  109_draft.csv  10_draft.csv  110_draft.csv  111_draft.csv  112_draft.csv  113_draft.csv  114_draft.csv  115_draft.csv  116_draft.csv  117_draft.csv  118_draft.csv  119_draft.csv  120_draft.csv  121_draft.csv  122_draft.csv  123_draft.csv  124_draft.csv  125_draft.csv  (+103 more)
(+32732 files in other folders)
